2002-05-28  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2002-05-27  Havoc Pennington  <hp@pobox.com>

	* src/window.c (meta_window_new): search for the window's screen 
	by root window instead of Screen*, maybe it will help with 
	bug #82664

2002-05-27  Kjartan Maraas  <kmaraas@gnome.org>

	* autogen.sh: Hook up intltoolize here.
	* configure.in: Initialize intltool.
	* src/metacity.schemas.in: Add this.
	* src/metacity.desktop.in: Add this too
	* src/Makefile.am: Hook up intltool support for .schemas and .desktop.
	* Makefile.am: Dist the intltool files.
			
2002-05-27  Anders Carlsson  <andersca@gnu.org>

	* src/themes/Gorilla/metacity-theme-1.xml: Apparently someone
	thinks my name is Anders Carlsom. Well, it's not.
	(Thanks to Carl-Johan Kjellander for noticing.)

2002-05-26  James M. Cape  <jcape@ignore-your.tv>

	* src/themes/Esco/metacity-theme-1.xml: Remove borders from
	Esco theme as well (didn't know you could), apparently fixed
	the problem where the spacing between the icon & the title
	got larger as the fontsize went up.

2002-05-26  Havoc Pennington  <hp@pobox.com>

	* src/themes/Atlanta/metacity-theme-1.xml: totally drop the
	borders off of maximized windows.

2002-05-26  Havoc Pennington  <hp@pobox.com>

        Patch from Gaute Lindkvist so you can't move the panel or desktop
	to only one workspace.
	
	* src/keybindings.c (handle_move_to_workspace): don't allow moving
	window to another space if the window is always_sticky

	* src/window.c (recalc_window_features): set the always_sticky
	field for desktop/dock windows.
	(meta_window_show_menu): disable unsticking always sticky windows
	via the menus

	* src/menu.c (meta_window_menu_new): disable workspace items 
	if requested

2002-05-26  Matthias Warkus  <mawarkus@gnome.org>

	* po/de.po: Added.
	* configure.in: de added to ALL_LINGUAS

2002-05-25 Erwann Chenede - <erwann.chenede@sun.com>

	* src/keybindings.c (rebuild_screen_binding_table,